Update dependencies for Java 11 support