@@ -353,20 +353,30 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                    <properties>
+                        <!-- <property>
+                            <name>surefire.testng.verbose</name>
+                            <value>10</value>
+                        </property> -->
+                    </properties>
                     <suiteXmlFiles>
                         <suiteXmlFile>resources/suites/${testsuite}.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <systemPropertyVariables>
                         <appConfig>resources/config/${app.config}</appConfig>
+                        <user.dir>/Users/vmutafov/work/playground/tests/playground-tests</user.dir>
                     </systemPropertyVariables>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
+                <!-- <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
@@ -375,6 +385,12 @@
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                </configuration> -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
                 </configuration>
             </plugin>
 
